--- a/GraphQL-APIs.csproj
+++ b/GraphQL-APIs.csproj
@@ -12,6 +12,11 @@
         <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.7" />
         <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
