--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "K_Sport_DB": "Server=localhost;Port=5432;User Id=postgres;Password=123;Database=KSport;"
+  }
 }
